--- a/Presentation/beamerthemeRUCTHEME.sty
+++ b/Presentation/beamerthemeRUCTHEME.sty
@@ -64,9 +64,9 @@
 \hypersetup{colorlinks,linkcolor=PrimaryColor,urlcolor=SecondaryColor}
 
 % set fonts
-\setbeamerfont{itemize/enumerate body}{size=\large}
-\setbeamerfont{itemize/enumerate subbody}{size=\normalsize}
-\setbeamerfont{itemize/enumerate subsubbody}{size=\small}
+\setbeamerfont{itemize/enumerate body}{size=\normalsize}
+\setbeamerfont{itemize/enumerate subbody}{size=\small}
+\setbeamerfont{itemize/enumerate subsubbody}{size=\scriptsize}
 
 % make pixelated bullets
 \setbeamertemplate{itemize item}{
@@ -148,7 +148,7 @@
 \setbeamertemplate{background}{ % all slides
     % progress bar stuff
     \progressbar@tmpcounta=\insertframenumber
-    \progressbar@tmpcountb=\inserttotalframenumber
+    \progressbar@tmpcountb=\insertmainframenumber
     \progressbar@tmpdim=\progressbar@pbwidth
     \divide\progressbar@tmpdim by 100
     \multiply\progressbar@tmpdim by \progressbar@tmpcounta
@@ -196,7 +196,7 @@
                     % if slide totals are active
                     \ifnum \value{showSlideTotal}>0\relax%
                         % draw both slide number and slide total
-                        \node[anchor=south east] at(\slidewidth,0.25cm) {\color{PrimaryColor}\tiny\insertframenumber/\inserttotalframenumber};
+                        \node[anchor=south east] at(\slidewidth,0.25cm) {\color{PrimaryColor}\tiny\insertframenumber/\insertmainframenumber};
                     \else
                         \node[anchor=south east] at(\slidewidth,0.25cm) {\color{PrimaryColor}\tiny\insertframenumber};
                     \fi
@@ -209,7 +209,7 @@
                     % if slide totals are active
                     \ifnum \value{showSlideTotal}>0\relax%
                         % slide number and slide total
-                        \node[anchor=south east] at(\slidewidth,0cm) {\color{PrimaryColor}\tiny\insertframenumber/\inserttotalframenumber};
+                        \node[anchor=south east] at(\slidewidth,0cm) {\color{PrimaryColor}\tiny\insertframenumber/\insertmainframenumber};
                     \else
                         \node[anchor=south east] at(\slidewidth,0cm) {\color{PrimaryColor}\tiny\insertframenumber};
                     \fi
